Moved CRUD methods to dbHelper.

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,5 +6,9 @@
         android:title="@string/action_insert_dummy_data"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/delete"
+        android:title="@string/action_delete_all_data"
+        app:showAsAction="never"/>
 
 </menu>
